tests/expectations/parser/identifiers/leading_underscore_fail.out
Error [EPAR0370053]: Identifiers cannot start with an underscore.
    --> test:4:13
     |
   4 |         let _c: u32 = a + b;
     |             ^^
     |
     = Identifiers must start with a letter.
